--- a/config.env
+++ b/config.env
@@ -4,4 +4,4 @@ DATABASE=mongodb+srv://mamaafrica:<PASSWORD>@cluster0.cuijqrz.mongodb.net/
 JWT_SECRET=288918912ukjduiujhduiiuewjk18
 ZEGO_APP_ID=1642584767
 ZEGO_SERVER_SECRET=71f6f8fd524f17d45aab8e9522ce95b1
-
+NODE_ENV=development
