--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "SHREYANSH SHAH",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
@@ -25,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.0",
     "socket.io": "^4.6.0",
     "xss-clean": "^0.1.1"
